[tool.poetry]
name = "temporal-community-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Adam Eury <euryadam@gmail.com>"]
readme = "README.md"
packages = [{include = "temporal_community_data_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.2.0"
pandas = "^2.0.2"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
